[package]
name = "sliding-window"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# Sliding-window KV eviction technique crate — retains a recent window plus a protected prefix.
# Extracted from the engine core (the streaming-llm/h2o/d2o precedent): depends only on
# `argus-extension-api` + `linkme` (no engine reference = proof of additive extension cost).
# Force-linked via one `use sliding_window as _;`. Score-free, plan-only (KeepSpec::LayerWide).
[dependencies]
argus-extension-api = { path = "../../argus-extension-api" }
linkme = "0.3"
